# stats-compass-core

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml  test_load_dataset.ipynb
.venv-test/: pyvenv.cfg
docs/: API.md  CONTRIBUTING.md  EXAMPLES.md  TOOLS.md
notebooks/: demo.ipynb  demo_arima.ipynb  demo_column_operations.ipynb  demo_ml.ipynb  demo_ml_arima.ipynb  demo_multi_dataframe.ipynb  demo_workflows.ipynb
stats_compass_core/: __init__.py  registry.py  results.py
stats_compass_core/cleaning/: __init__.py  apply_imputation.py  clean_dates.py  dedupe.py  dropna.py  handle_outliers.py
stats_compass_core/data/: __init__.py  add_column.py  concat_dataframes.py  datasets.py  drop_columns.py  get_sample.py  get_schema.py  inspect_data.py  list_dataframes.py  list_files.py  load_csv.py  load_dataset.py  load_excel.py  merge_dataframes.py  rename_columns.py  save_csv.py
stats_compass_core/eda/: __init__.py  chi_square_tests.py  correlations.py  data_quality.py  describe.py  hypothesis_tests.py
stats_compass_core/ml/: __init__.py  _deprecated_train_classifier.py  _deprecated_train_regressor.py  arima.py  common.py  evaluate_classification_model.py  evaluate_regression_model.py  save_model.py  train_classifier.py  train_gradient_boosting_classifier.py  train_gradient_boosting_regressor.py  train_linear_regression.py  train_logistic_regression.py  train_random_forest_classifier.py  train_random_forest_regressor.py  train_regressor.py
stats_compass_core/ml/supervised/: __init__.py  train_gradient_boosting_classifier.py  train_gradient_boosting_regressor.py  train_linear_regression.py  train_logistic_regression.py  train_random_forest_classifier.py  train_random_forest_regressor.py
stats_compass_core/ml/timeseries/: __init__.py  arima.py
stats_compass_core/parent/: __init__.py  tools.py
stats_compass_core/plots/: __init__.py  bar_chart.py  classification_curves.py  confusion_matrix.py  feature_importance.py  histogram.py  lineplot.py  scatter_plot.py
stats_compass_core/transforms/: __init__.py  bin_rare_categories.py  filter_dataframe.py  groupby_aggregate.py  mean_target_encoding.py  pivot.py  split_column_by_group.py
stats_compass_core/utils/: __init__.py  file_safety.py  spreadsheet_safety.py
stats_compass_core/workflows/: __init__.py  classification.py  configs.py  eda_report.py  feature_engineering.py  preprocessing.py  regression.py  results.py  timeseries.py  utils.py
tests/: __init__.py  test_arima_tools.py  test_cleaning_tools.py  test_data_tools.py  test_describe.py  test_dropna.py  test_eda_tools.py  test_encoding_tools.py  test_groupby_aggregate.py  test_list_files.py  test_load_dataset.py  test_ml_tools.py  test_plot_tools.py  test_registry.py  test_smart_ingestion.py  test_spreadsheet_safety.py  test_state.py  test_workflow_tools.py
