[tool.poetry]
name = "stats-compass-core"
version = "0.1.0"
description = "A clean toolkit of deterministic pandas-based data tools"
authors = ["Olamide Ogunbiyi <oogunbiyi21@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stats_compass_core"}]
keywords = ["pandas", "data", "tools", "data-science", "eda", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
pydantic = "^2.12.5"
numpy = "^2.3.5"
scikit-learn = {version = "^1.5.0", optional = true}
matplotlib = {version = "^3.10.7", optional = true}
seaborn = {version = "^0.13.2", optional = true}

[tool.poetry.extras]
ml = ["scikit-learn"]
plots = ["matplotlib", "seaborn"]
all = ["scikit-learn", "matplotlib", "seaborn"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
black = "^25.11.0"
ruff = "^0.14.7"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=stats_compass_core --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
